--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "serverless-mysql": "^1.5.4"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "clsx": "^1.1.1",
+    "prop-types": "^15.7.2"
   }
 }
