--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "chart.js": "^2.9.4",
+    "moment": "^2.29.1",
     "next": "10.0.6",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "serverless-mysql": "^1.5.4"
   },
