--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "chart.js": "^2.9.4",
     "csrf": "^3.1.0",
     "graphql": "^15.5.0",
+    "js-sha1": "^0.6.0",
     "moment": "^2.29.1",
     "next": "10.0.6",
     "next-pagination": "^2.1.1",
     "react": "17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
-    "serverless-mysql": "^1.5.4"
+    "serverless-mysql": "^1.5.4",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
